css/style.css
/* ** BASIC STYLING ** */

body {
  font: 1em/1.3 Helvetica, Arial, sans-serif;
  margin: 15px;
  font-size: 1.2em;
  background: #fff;
  color: #000;
}

a:link {
  color: #000;
  font-weight: 400;
  font-size: 1.5em;
}

.about a:hover {
  color: #00f;
}

.about a:visited {
  color: #f00;
  font-weight: bold;
}

.module {
  list-style: none;
}

.logo {
  padding-bottom: 3em;
}

.about p {
  font-family: Helvetica, Arial, sans-serif;
}

.ul-about {
  font-family: Helvetica, Arial, sans-serif;
  list-style: none;
  padding-left: 0;
}

/* ** NAVIGATION ** */

/* Strip the ul of padding and list styling */

nav {
  padding-bottom: 3em;
}

nav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  position: absolute;
}

/* Create a horizontal list with spacing */

nav li {
  display: inline-block;
  float: left;
  margin-right: 1px;
}

/* Style for menu links */

nav li a {
  display: block;
  min-width: 205px;
  height: 50px;
  text-align: left;
  line-height: 50px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: #000;
  background: #fff;
  text-decoration: none;
}

nav li:hover a {
  text-decoration-line: underline;
}

/* Prevent text wrapping */

nav li ul li a {
  width: auto;
  min-width: 100px;
  padding: 0 20px;
}

footer {
  font: 0.75em/1.67 Helvetica, Arial, sans-serif;
  padding-top: 3em;
}

/* Responsive Styles */

@media screen and (max-width: 760px) {
  /* Make dropdown links appear inline */
  ul {
    position: static;
    /* display: none; */
  }

  /* Make all menu links full width */
  ul li,
  li a {
    width: 100%;
  }
}

.wrapper {
  width: 95%;
  margin: 1.5em auto;
}

.container {
  display: grid;
  grid-template-columns: 300px 300px;
  grid-gap: 10px;
}

.box {
}

@media (min-width: 770px) {
}

@media only screen and (min-width: 400px) {
}

@media only screen and (min-width: 400px) {
}

@media only screen and (min-width: 700px) {
}

@media only screen and (min-width: 900px) {
}

@media only screen and (min-width: 1100px) {
}

@media only screen and (min-width: 1280px) {
}

